# aoc-2025

cpp/: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  justfile  pixi.toml
cpp/day01/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day02/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day03/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day04/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day05/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day06/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day07/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day08/: CMakeLists.txt  main.cpp
cpp/day09/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day10/: CMakeLists.txt  main.cpp  main2.cpp
cpp/day11/: CMakeLists.txt  main.cpp
cpp/day12/: CMakeLists.txt  main.cpp  main2.cpp
cpp/toolchain/: Clang.cmake
cpp/utils/: CMakeLists.txt
cpp/utils/include/utils/: utils.h
cpp/utils/src/: utils.cpp
